// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  data-testid="signIn-container"
>
  <div
    role="banner"
  >
    <Localized
      id="signIn-signInToJoinHeader"
      subtitle={
        <div
          className="coral coral-login-signIn-header SignIn-header"
        />
      }
      title={
        <div
          className="coral coral-login-signIn-title SignIn-title"
        />
      }
    >
      <div
        className="coral coral-login-signIn-bar SignIn-bar"
      >
        <div
          className="coral coral-login-signIn-title SignIn-title"
        >
          Sign In
        </div>
        <div
          className="coral coral-login-signIn-header SignIn-header"
        >
          to join the conversation
        </div>
      </div>
    </Localized>
  </div>
  <div
    className="coral coral-login-signIn-subBar SignIn-subBar"
    role="contentinfo"
  >
    <Localized
      id="signIn-noAccountSignUp"
      textlink={
        <withPropsOnChange(Button)
          className="SignIn-signUp"
          color="primary"
          fontFamily="secondary"
          fontWeight="semiBold"
          href="/signUp"
          marginSize="none"
          onClick={[Function]}
          textSize="small"
          underline={true}
          variant="flat"
        />
      }
    >
      <div
        className="coral coral-login-signIn-noAccount SignIn-noAccount"
      >
        Don't have an account?
        <withPropsOnChange(Button)
          className="SignIn-signUp"
          color="primary"
          fontFamily="secondary"
          fontWeight="bold"
          href="/signUp"
          marginSize="none"
          onClick={[Function]}
          textSize="small"
          underline={true}
          variant="flat"
        >
          Sign Up
        </withPropsOnChange(Button)>
      </div>
    </Localized>
  </div>
  <Main
    data-testid="signIn-main"
  >
    <SignInContainer />
    <OrSeparator />
    <ForwardRef(forwardRef)>
      <Relay(SignInWithFacebookContainer)
        auth={Object {}}
      />
      <Relay(SignInWithGoogleContainer)
        auth={Object {}}
      />
      <Relay(SignInWithOIDCContainer)
        auth={Object {}}
      />
    </ForwardRef(forwardRef)>
  </Main>
</div>
`;

exports[`renders error 1`] = `
<div
  data-testid="signIn-container"
>
  <div
    role="banner"
  >
    <Localized
      id="signIn-signInToJoinHeader"
      subtitle={
        <div
          className="coral coral-login-signIn-header SignIn-header"
        />
      }
      title={
        <div
          className="coral coral-login-signIn-title SignIn-title"
        />
      }
    >
      <div
        className="coral coral-login-signIn-bar SignIn-bar"
      >
        <div
          className="coral coral-login-signIn-title SignIn-title"
        >
          Sign In
        </div>
        <div
          className="coral coral-login-signIn-header SignIn-header"
        >
          to join the conversation
        </div>
      </div>
    </Localized>
  </div>
  <div
    className="coral coral-login-signIn-subBar SignIn-subBar"
    role="contentinfo"
  >
    <Localized
      id="signIn-noAccountSignUp"
      textlink={
        <withPropsOnChange(Button)
          className="SignIn-signUp"
          color="primary"
          fontFamily="secondary"
          fontWeight="semiBold"
          href="/signUp"
          marginSize="none"
          onClick={[Function]}
          textSize="small"
          underline={true}
          variant="flat"
        />
      }
    >
      <div
        className="coral coral-login-signIn-noAccount SignIn-noAccount"
      >
        Don't have an account?
        <withPropsOnChange(Button)
          className="SignIn-signUp"
          color="primary"
          fontFamily="secondary"
          fontWeight="bold"
          href="/signUp"
          marginSize="none"
          onClick={[Function]}
          textSize="small"
          underline={true}
          variant="flat"
        >
          Sign Up
        </withPropsOnChange(Button)>
      </div>
    </Localized>
  </div>
  <Main
    data-testid="signIn-main"
  >
    <withPropsOnChange(CallOut)
      color="negative"
      title="Server Error"
    />
    <SignInContainer />
    <OrSeparator />
    <ForwardRef(forwardRef)>
      <Relay(SignInWithFacebookContainer)
        auth={Object {}}
      />
      <Relay(SignInWithGoogleContainer)
        auth={Object {}}
      />
      <Relay(SignInWithOIDCContainer)
        auth={Object {}}
      />
    </ForwardRef(forwardRef)>
  </Main>
</div>
`;

exports[`renders without email login 1`] = `
<div
  data-testid="signIn-container"
>
  <div
    role="banner"
  >
    <Localized
      id="signIn-signInToJoinHeader"
      subtitle={
        <div
          className="coral coral-login-signIn-header SignIn-header"
        />
      }
      title={
        <div
          className="coral coral-login-signIn-title SignIn-title"
        />
      }
    >
      <div
        className="coral coral-login-signIn-bar SignIn-bar"
      >
        <div
          className="coral coral-login-signIn-title SignIn-title"
        >
          Sign In
        </div>
        <div
          className="coral coral-login-signIn-header SignIn-header"
        >
          to join the conversation
        </div>
      </div>
    </Localized>
  </div>
  <Main
    data-testid="signIn-main"
  >
    <ForwardRef(forwardRef)>
      <Relay(SignInWithFacebookContainer)
        auth={Object {}}
      />
      <Relay(SignInWithGoogleContainer)
        auth={Object {}}
      />
      <Relay(SignInWithOIDCContainer)
        auth={Object {}}
      />
    </ForwardRef(forwardRef)>
  </Main>
</div>
`;
